@@ -146,6 +146,25 @@ class Glossary {
 		return $result;
 	}
 
+	function delete_word($term) {
+		$tmp = 'delete_word(' . $term . ')';
+		error_log($tmp);
+		$term = strtolower($this->_filterSpecialChars(trim($term)));
+
+		if (!isset($this->definitions[$term])) {
+			return;
+		}
+
+		/*
+		// feedback on the mailing list: keep entries in history
+		$result = $this->persister->deleteFromHistory($term);
+		if (is_error($result)) return $result;
+		*/
+
+		return $this->persister->deleteDefinition($term);
+		 
+	}
+
 	function save($term, $definition) {
 		
 		$tmp = 'save(' . $term . ',' . $definition . ')';
